@@ -1,3 +1,7 @@
+2004-10-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/running.sgml: Update list of supported debug flags.
+
 2004-10-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkenums.sgml: Clarify documentation for selection
